# TransazioniLaboratorio

./: Abbonamento.cpp  Abbonamento.h  BonificoEntrata.cpp  BonificoEntrata.h  BonificoUscita.cpp  BonificoUscita.h  CMakeLists.txt  Conto.cpp  Conto.h  ContoCorrente.cpp  ContoCorrente.h  Data.cpp  Data.h  Entrata.cpp  Entrata.h  Persona.cpp  Persona.h  Stipendio.cpp  Stipendio.h  Transazione.cpp  Transazione.h  Uscita.cpp  Uscita.h  main.cpp  transazioni.csv
test/: test_contocorrente.cpp  test_data.cpp  test_entrata.cpp  test_transazione.cpp  test_uscita.cpp
